can now access data from files and implemented stock model methods